move abstract to log clearner lag integration test
Signed-off-by: see-quick <maros.orsak159@gmail.com>